--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -85,3 +85,25 @@
   color: white; /* Ensure the heart icon stays visible on pink background */
   border: none; /* Remove border when filled with pink */
 }
+
+.heart-button.clicked .heart-icon {
+  animation: pop 0.6s ease forwards;
+  background-color: rgb(230, 67, 94);
+  color: rgb(211, 27, 57);
+  border: none;
+}
+
+@keyframes pop {
+  0% {
+    transform: scale(1);
+  }
+  30% {
+    transform: scale(1.4);
+  }
+  60% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1.2);
+  }
+}
