--- a/src/pages/Wishlist/Wishlist.css
+++ b/src/pages/Wishlist/Wishlist.css
@@ -59,13 +59,14 @@ h2.list__title {
 .card__runtime {
   display: flex;
   justify-content: space-between;
-
+color: white;
   font-size: 0.75rem;
   margin-bottom: 0.25rem;
 }
 
 .card__rating {
   display: flex;
+  color: white;
 }
 
 .card__description {
