some bug fixes in json server

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,12 +6,19 @@
   justify-content: space-between;
 }
 
-.headerLeft,
-.headerRight {
+.headerLeft {
   display: flex;
   align-items: center;
 }
 
+.headerRight {
+  display: flex;
+  align-items: right;
+}
+
+.wishlist {
+
+}
 a > span {
   margin: 0 30px;
   font-size: 1.3rem;
@@ -36,3 +43,6 @@ a > span:hover {
 }
 
 
+.icon {
+  margin-left: 5px;
+}
