--- a/src/pages/Wishlist/Wishlist.css
+++ b/src/pages/Wishlist/Wishlist.css
@@ -50,6 +50,12 @@ h2.list__title {
   opacity: 1;
 }
 
+.removeButton {
+  position: absolute;
+  top: 0px;
+  right: 12px;
+}
+
 .card__title {
   font-weight: 900;
   font-size: 1rem;
