--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -58,3 +58,15 @@ a > span {
   color: #008000;
   font-size: 1.2rem;
 }
+
+.badge {
+  position: absolute;
+  top: 5px;
+  right: 26px;
+  background-color: #ff0000;
+  color: #fff;
+  border-radius: 50%;
+  padding: 0px 6px;
+  font-size: 12px;
+  opacity: 1;
+}
