--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,7 +18,8 @@
 
 .wishlist {
 }
-a > span {
+
+.header__link > span {
   margin: 0 30px;
   font-size: 1.3rem;
   cursor: pointer;
@@ -29,14 +30,6 @@ a > span {
 .header__icon {
   width: 80px;
   cursor: pointer;
-}
-
-.user__avatar {
-  font-size: 2rem;
-}
-
-.icon {
-  margin-left: 5px;
 }
 
 .popular:hover {
@@ -61,8 +54,8 @@ a > span {
 
 .badge {
   position: absolute;
-  top: 5px;
-  right: 26px;
+  top: 10px;
+  right: 50px;
   background-color: #ff0000;
   color: #fff;
   border-radius: 50%;
