--- a/src/pages/Wishlist/Wishlist.css
+++ b/src/pages/Wishlist/Wishlist.css
@@ -6,21 +6,29 @@ h2.list__title {
   font-weight: bold;
 }
 
-.cards {
+.wishlist-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 10px;
+  margin-top: 50px;
+}
+
+.cards-wishlist {
   display: inline-block;
   transition: transform 0.2s;
   position: relative;
   border-radius: 10px;
   overflow: hidden;
-  margin: 0.19rem;
+  margin: 0.5rem;
   cursor: pointer;
-  min-width: 200px;
-  height: 300px;
+  width: 200px; /* Set a fixed width for the cards */
+  height: 300px; /* Set a fixed height for the cards */
   z-index: 0;
   border: 1px solid rgb(99, 99, 99);
 }
 
-.cards:hover {
+.cards-wishlist:hover {
   transform: scale(1.02);
   z-index: 1000;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
@@ -29,14 +37,16 @@ h2.list__title {
 }
 
 .card__img {
-  height: 300px;
+  width: 100%;
+  height: 100%; /* Ensure the image fills the card */
+  object-fit: cover; /* Maintain aspect ratio and cover the entire card */
 }
 
 .card__overlay {
   position: absolute;
-  padding: 0 1rem 1rem 1rem;
-  bottom: 0px;
-  height: 290px;
+  padding: 1rem;
+  bottom: 0;
+  height: 100%;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -46,20 +56,30 @@ h2.list__title {
   transition: opacity 0.2s;
 }
 
-.card__overlay:hover {
+.cards-wishlist:hover .card__overlay {
   opacity: 1;
 }
 
 .removeButton {
   position: absolute;
-  top: 0px;
-  right: 12px;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.removeButton .fa-circle-xmark {
+  font-size: 1.5rem;
+  color: #f00505;
 }
 
 .card__title {
   font-weight: 900;
   font-size: 1rem;
   margin-bottom: 0.4rem;
+  color: white;
 }
 
 .card__runtime {
@@ -72,58 +92,12 @@ h2.list__title {
 
 .card__rating {
   display: flex;
+  align-items: center;
   color: white;
-}
-
-.card__description {
-  display: flex;
-
-  font-style: italic;
-  font-size: 0.75rem;
-  margin-bottom: 0.25rem;
 }
 
 .star {
   margin-left: 2px;
-}
-
-.heart-icon {
-  border: 1px solid rgb(255, 255, 255);
-  border-radius: 50%;
-  padding: 5px;
-  transition: transform 0.3s ease, background-color 0.3s ease;
-}
-
-.heart-button:hover .heart-icon {
-  transform: scale(1.2);
-  background-color: rgb(230, 67, 94);
-  color: white; /* Ensure the heart icon stays visible on pink background */
-  border: none; /* Remove border when filled with pink */
-}
-
-.heart-button.clicked .heart-icon {
-  animation: pop 0.6s ease forwards;
-  background-color: rgb(230, 67, 94);
-  color: rgb(211, 27, 57);
-  border: none;
-}
-
-@keyframes pop {
-  0% {
-    transform: scale(1);
-  }
-  30% {
-    transform: scale(1.4);
-  }
-  60% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1.2);
-  }
-}
-
-.wishlist-container {
-  margin: 10px;
-  margin-top: 50px;
+  font-size: 0.75rem;
+  color: yellow;
 }
